--- a/main.css
+++ b/main.css
@@ -6,11 +6,20 @@
 body {
     font-family: emulogic;
     color: white;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-user-select: none;
+    background-image: url(images/geometry2.png);
+    background-repeat: repeat;
 
 }
 
 canvas { 
     background-color: black;
+    -webkit-box-shadow: 0px 0px 5px 3px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow:    0px 0px 5px 3px rgba(50, 50, 50, 0.75);
+    box-shadow:         0px 0px 5px 3px rgba(50, 50, 50, 0.75);
 }
 
 #wrapper {
@@ -26,6 +35,11 @@ canvas {
     width: 100%;
     height: 100%;
     top: 0px;
+    cursor:default;
+    background-size: cover;
+    background-image: url(images/desktopwip.png);
+
+}
 
 #next_level {
     background-color: black;
@@ -45,14 +59,49 @@ canvas {
     visibility: hidden;
 }
 
-#buttonsHelper {
+#gameTitle{
+    font-size: 82px;
+    position: relative;
+    left: 7px; 
+    top: 77px; 
+}
 
+#buttonsHelper {
+    top: 250px;
+    position: relative;
+    left: 130px;
 }
 
 #playButton {
-
+    position: relative;
+    left: 140px;
+    top: 241px;
 }
 
-#credits {
+#charImg {
+    position: relative;
+    text-align:center;
+    top:-167px;
+    left:127px;
+}
 
+#charImg {
+    -webkit-animation-name: rotate; 
+    -webkit-animation-duration: 2s; 
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    -moz-animation-name: rotate; 
+    -moz-animation-duration: 2s; 
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: linear;
+}
+
+@-webkit-keyframes rotate {
+    from {-webkit-transform: rotate(0deg);}
+    to {-webkit-transform: rotate(360deg);}
+}
+
+@-moz-keyframes rotate {
+    from {-moz-transform: rotate(0deg);}
+    to {-moz-transform: rotate(360deg);}
 }
